Fix oversized horizontal scrollbars in Safari caused by Splide layout overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -519,12 +519,17 @@ ul.jekyllcodex_accordion li label::before {
     background: $light-blue;
 }
 
+.splide__track {
+    max-width: 100% !important;
+}
+
 .splide__slide {
     display: grid;
+    max-width: 100% !important;
 }
 
 .splide__slide img {
-    margin: auto !important;
+    margin: 0px auto 0px auto !important;
     height: auto;
     max-width: 100%;
     max-height: 100%;
